--- a/flask_app/templates/layout.html
+++ b/flask_app/templates/layout.html
@@ -63,10 +63,10 @@
             <h3>Menu</h3>
             <p class='text-muted'>You can put any information here you'd like.
               <ul class="list-group">
-                <li class="list-group-item list-group-item-light">Latest Posts</li>
+                <li class="list-group-item list-group-item-light">Most Popular</li>
                 <li class="list-group-item list-group-item-light">Announcements</li>
-                <li class="list-group-item list-group-item-light">Calendars</li>
-                <li class="list-group-item list-group-item-light">etc</li>
+                <li class="list-group-item list-group-item-light">Calendar</li>
+                <li class="list-group-item list-group-item-light">Contact us</li>
               </ul>
             </p>
           </div>
