--- a/flask_app/templates/home.html
+++ b/flask_app/templates/home.html
@@ -1,16 +1,16 @@
 {% extends "layout.html" %}
 {% block content %}
     {% for post in posts %}
-        <article class="media content-section">
-             <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}">
-          <div class="media-body">
-            <div class="article-metadata">
-              <a class="mr-2" href="#">{{ post.author.username }}</a>
-              <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
-            </div>
-            <h2><a class="article-title" href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h2>
-            <p class="article-content">{{ post.content }}</p>
-          </div>
-        </article>
+            <article class="media content-section">
+              <div class="media-body">
+                <div class="article-metadata">
+                  <p class="mr-2" href="#">{{ post.journal }}</p>
+                  <a class="text-muted">{{ post.year }}</a>
+                </div>
+                <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+                <p class="article-content">{{ post.text|truncate(500)|safe }}</p>
+                  <a class="mr-2" href="{{ post.url }}">{{ post.url }}</a>
+              </div>
+            </article>
     {% endfor %}
 {% endblock content %}
